--- a/dashboard-supplier.html
+++ b/dashboard-supplier.html
@@ -14,6 +14,7 @@
 
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/sidenav.css" rel="stylesheet">
 
     <!-- Custom -->
     <link href="assets/css/jpushmenu.css" rel="stylesheet">
@@ -27,52 +28,6 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-    <style>
-        .sidenav {
-            height: 89%;
-            width: 0;
-            position: fixed;
-            z-index: 1;
-            bottom: 0;
-            left: 0;
-            background-color: #111;
-            overflow-x: hidden;
-            transition: 0.5s;
-            padding-top: 60px;
-        }
-
-        .sidenav a {
-            padding: 8px 8px 20px 32px;
-            text-decoration: none;
-            font-size: 20px;
-            color: #fff;
-            display: block;
-            transition: 0.3s;
-        }
-
-        .sidenav a:hover {
-            color: #fa6f34;
-        }
-
-        .sidenav .closebtn {
-            position: absolute;
-            top: 0;
-            right: 25px;
-            font-size: 36px;
-            margin-left: 50px;
-        }
-
-        @media screen and (max-height: 450px) {
-            .sidenav {
-                padding-top: 15px;
-            }
-
-            .sidenav a {
-                font-size: 18px;
-            }
-        }
-    </style>
 </head>
 
 <body>
@@ -261,10 +216,14 @@
                     <!--  -->
                     <div id="mySidenav" class="sidenav">
                         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                        <a href="#">About</a>
-                        <a href="#">Services</a>
-                        <a href="#">Clients</a>
-                        <a href="#">Contact</a>
+                        <a href="#dashboard" aria-controls="dashboard" role="tab" data-toggle="tab">Dashboard </a>
+                        <a href="#sales" aria-controls="sales" role="tab" data-toggle="tab">Sales</a>
+                        <a href="#orders" aria-controls="orders" role="tab" data-toggle="tab">Orders</a>
+                        <a href="#customers" aria-controls="customers" role="tab" data-toggle="tab">Customers</a>
+                        <a href="#products" aria-controls="products" role="tab" data-toggle="tab">Products</a>
+                        <a href="#promotion" aria-controls="promotion" role="tab" data-toggle="tab">Promotion</a>
+                        <a href="#store" aria-controls="store" role="tab" data-toggle="tab">Store
+                            Settings</a>
                     </div>
                 </div><!-- /.container -->
             </nav>
